# memmm

./: pyproject.toml
src/mem/: main.py
src/mem/cli/: chat_loop.py  cli_manager.py
src/mem/config/: _app_config.toml  _temp_config.toml  config_manager.py
src/mem/config/_presets/: pirate_preset.toml  test_preset.toml
src/mem/llms/: request.py  request_manager.py
src/mem/messages/: messages_manager.py
src/mem/speech/stt/: stt_handler.py
src/mem/toolkit/: tools_manager.py
src/mem/toolkit/tools/: __init__.py  get_location.py  get_weather.py  tavily_search.py
src/mem/utils/: helpers.py  logging_setup.py  rich_setup.py
